--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ baidu-aip = "^2.2.18"
 dbus-python = "^1.2.16"
 
 [tool.poetry.dev-dependencies]
+dephell = "^0.8.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -28,3 +29,7 @@ default = true
 [[tool.poetry.source]]
 name = "tuna"
 url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
+
+[tool.dephell.main]
+from = {format = "poetry", path = "pyproject.toml"}
+to = {format = "setuppy", path = "setup.py"}
