--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ homepage = "https://github.com/BruceZhang1993/FastOCR"
 repository = "https://github.com/BruceZhang1993/FastOCR"
 documentation = "https://github.com/BruceZhang1993/FastOCR"
 keywords = ["ocr"]
-include = ["fastocr/qml/*.qml", "data/FastOCR.desktop", "data/config.example.ini"]
+include = ["fastocr/qml/*.qml", "fastocr/data/FastOCR.desktop", "fastocr/data/config.example.ini"]
 
 [tool.poetry.dependencies]
 python = ">=3.7,<3.10"
