--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,9 @@ include = ["fastocr/qml/*.qml", "fastocr/data/FastOCR.desktop", "fastocr/data/co
 python = ">=3.7,<3.10"
 qasync = "^0.13.0"
 PySide2 = "^5.15.2"
-baidu-aip = "^2.2.18"
 dbus-python = "^1.2.16"
 click = "^7.1.2"
+aiohttp = "^3.7.3"
 
 [tool.poetry.dev-dependencies]
 dephell = "^0.8.3"
