--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ homepage = "https://github.com/BruceZhang1993/FastOCR"
 repository = "https://github.com/BruceZhang1993/FastOCR"
 documentation = "https://github.com/BruceZhang1993/FastOCR"
 keywords = ["ocr"]
-include = ["fastocr/qml/*.qml", "fastocr/data/FastOCR.desktop", "fastocr/data/config.example.ini"]
+include = ["fastocr/qml/*.qml", "fastocr/data/FastOCR.desktop", "fastocr/data/config.example.ini",
+    "fastocr/data/i18n.pro", "fastocr/i18n/*.qm"]
 
 [tool.poetry.dependencies]
 python = ">=3.7,<3.10"
