--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ include = ["fastocr/qml/*.qml", "fastocr/data/FastOCR.desktop", "fastocr/data/co
 [tool.poetry.dependencies]
 python = ">=3.7,<3.10"
 qasync = "^0.13.0"
-PySide2 = "^5.15.2"
+PySide2 = "*"
 dbus-python = "^1.2.16"
 click = "^7.1.2"
 aiohttp = "^3.7.3"
