update zh_cn trans

--- a/fastocr/data/config.example.ini
+++ b/fastocr/data/config.example.ini
@@ -1,4 +1,19 @@
 [BaiduOCR]
-APP_ID=
-API_KEY=
-SECRET_KEY=
+app_id =
+api_key =
+secret_key =
+use_accurate_mode = 0
+languages = []
+
+[General]
+default_backend =
+icon_theme =
+mode =
+
+[YoudaoOCR]
+app_id =
+secret_key =
+
+[FaceOCR]
+face_apikey =
+face_apisec =
