--- a/fastocr/data/FastOCR.desktop
+++ b/fastocr/data/FastOCR.desktop
@@ -4,7 +4,7 @@ GenericName=OCR Tool
 GenericName[zh_CN]=OCR 识别工具
 Comment=A OCR tool for Linux desktop
 Keywords=capture;ocr;
-Exec=python3 -m fastocr
+Exec=fastocr %U
 Icon=
 Terminal=false
 Type=Application
