--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ PyQt5-sip = "*"
 dephell = "*"
 
 [tool.poetry.extras]
-dbus = ["dbus-python"]
+linux = ["dbus-python"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
