--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,12 @@ aiohttp = "*"
 dbus-python = { version = "*", optional = true }
 PyQt5 = "*"
 PyQt5-sip = "*"
+PyQt5-Qt5 = "*"
 
 [tool.poetry.dev-dependencies]
 poetry2setup = "*"
 pytest = "*"
-pytest-asyncio = "^0.15.1"
+pytest-asyncio = "*"
 
 [tool.poetry.extras]
 linux = ["dbus-python"]
@@ -35,12 +36,3 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 fastocr = 'fastocr.__main__:main'
-
-[[tool.poetry.source]]
-name = "douban"
-url = "https://pypi.doubanio.com/simple/"
-default = true
-
-[[tool.poetry.source]]
-name = "tuna"
-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
