--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         python-version: [ 3.8, 3.9 ]
         poetry-version: [ 1.1.7 ]
-        os: [ ubuntu-20.04, macos-latest, windows-latest ]
+        os: [ ubuntu-20.04, macos-latest ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
