--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
       - name: Install platform dependencies
         if: matrix.os == 'ubuntu-20.04'
         run: sudo apt install libdbus-1-dev build-essential libpython3-dev qt5-default
+      - name: Install dependencies
+        run: poetry install
       - name: Run tests
         uses: GabrielBB/xvfb-action@v1
         with:
