--- a/AppImageBuilder.yml
+++ b/AppImageBuilder.yml
@@ -5,7 +5,7 @@ script:
   # Make usr and icons dirs
   - mkdir -p AppDir/usr/src
   # Install application dependencies
-  - python3 setup.py install --root=AppDir --optimize=1 --ignore-installed --prefix=/usr
+  - python3 setup.py install --root=AppDir --optimize=1 --prefix=/usr
 
 
 AppDir:
@@ -15,6 +15,7 @@ AppDir:
     id: com.github.brucezhang1993.fastocr
     name: FastOCR
     version: 0.3.6
+    icon: applications-system
     # Set the python executable as entry point
     exec: usr/bin/python3
     # Set the application main script path as argument. Use '$@' to forward CLI parameters
