--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ documentation = "https://github.com/BruceZhang1993/FastOCR"
 keywords = ["ocr"]
 readme = "README.md"
 include = ["fastocr/qml/*.qml", "fastocr/qml/component/*.qml", "fastocr/data/FastOCR.desktop", "fastocr/data/config.example.ini",
-    "fastocr/data/i18n.pro", "fastocr/i18n/*.qm", "fastocr/resource/icon/*/*.svg", "fastocr/resource/icon/*/*.png"]
+    "fastocr/data/i18n.pro", "fastocr/i18n/*.qm", "fastocr/resource/icon/*/*.svg", "fastocr/resource/icon/*/*.png", "fastocr/data/*.xml"]
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
