--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [ 3.8, 3.9, '3.10' ]
-        poetry-version: [ 1.1.7 ]
+        poetry-version: [ 1.3.2 ]
         os: [ ubuntu-20.04, macos-latest ]
     runs-on: ${{ matrix.os }}
     steps:
@@ -30,6 +30,8 @@ jobs:
         run: |
           sudo apt update
           sudo apt install libdbus-1-dev build-essential libpython3-dev qt5-default
+      - name: Poetry lock file
+        run: poetry lock
       - name: Install dependencies
         run: poetry install
       - name: Run tests
