--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [ 3.9 ]
-        poetry-version: [ 1.1.7 ]
+        poetry-version: [ 1.3.2 ]
         os: [ ubuntu-20.04 ]
     runs-on: ${{ matrix.os }}
     steps:
@@ -31,6 +31,8 @@ jobs:
         run: |
           sudo apt update
           sudo apt install libdbus-1-dev build-essential libpython3-dev qt5-default
+      - name: Poetry lock file
+        run: poetry lock
       - name: Install dependencies
         run: poetry install
       - name: Run tests
