--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,19 +13,26 @@ include = ["fastocr/qml/*.qml", "fastocr/qml/component/*.qml", "fastocr/data/Fas
     "fastocr/data/i18n.pro", "fastocr/i18n/*.qm", "fastocr/resource/icon/*/*.svg", "fastocr/resource/icon/*/*.png", "fastocr/data/*.xml"]
 
 [tool.poetry.dependencies]
-python = ">=3.7,<4.0"
+python = ">=3.8,<3.13"
 qasync = "*"
 click = "*"
 aiohttp = "*"
 dbus-next = { version = "*", platform = "linux" }
 PyQt6 = "*"
+paddlepaddle = { version = "*", optional = true }
+paddleocr = { version = "*", optional = true }
+
+[tool.poetry.extras]
+local = ["paddleocr", "paddlepaddle"]
 
 [tool.poetry.dev-dependencies]
-poetry2setup = "*"
 pytest = "*"
 pytest-asyncio = "*"
 pyinstaller = "*"
 appimage-builder = { version = "*", platform = "linux" }
+
+[tool.poetry.group.dev.dependencies]
+pyinstaller = "^6.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
