--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -12,24 +12,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.8, 3.9, '3.10' ]
-        poetry-version: [ 1.3.2 ]
-        os: [ ubuntu-20.04, macos-latest ]
+        python-version: [ '3.10', '3.11', '3.12', '3.13' ]
+        poetry-version: [ '2.1.1' ]
+        os: [ ubuntu-latest, macos-latest ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Setup poetry
-        uses: abatilo/actions-poetry@v2.0.0
+        uses: abatilo/actions-poetry@v3
         with:
           poetry-version: ${{ matrix.poetry-version }}
       - name: Install platform dependencies
-        if: matrix.os == 'ubuntu-20.04'
+        if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt update
-          sudo apt install libdbus-1-dev build-essential libpython3-dev qt5-default
+          sudo apt install libdbus-1-dev build-essential libpython3-dev qt6-default
       - name: Poetry lock file
         run: poetry lock
       - name: Install dependencies
