--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt update
-          sudo apt install libdbus-1-dev build-essential libpython3-dev
+          sudo apt install libdbus-1-dev build-essential libpython3-dev freeglut3-dev
       - name: Poetry lock file
         run: poetry lock
       - name: Install dependencies
