--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ include = ["fastocr/qml/*.qml", "fastocr/qml/component/*.qml", "fastocr/data/Fas
     "fastocr/data/i18n.pro", "fastocr/i18n/*.qm", "fastocr/resource/icon/*/*.svg", "fastocr/resource/icon/*/*.png", "fastocr/data/*.xml"]
 
 [tool.poetry.dependencies]
-python = ">=3.11,<4.0"
+python = ">=3.11,<3.15"
 qasync = "*"
 click = "*"
 aiohttp = "*"
@@ -24,7 +24,7 @@ PyQt6 = "*"
 poetry2setup = "*"
 pytest = "*"
 pytest-asyncio = "*"
-pyinstaller = "*"
+pyinstaller = ">=6.15.0"
 appimage-builder = { version = "*", platform = "linux" }
 
 [build-system]
@@ -33,3 +33,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 fastocr = 'fastocr.__main__:main'
+
+[[tool.poetry.source]]
+name = "tuna"
+url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
+priority = "primary"
